Starting to map out the page framework.
Adding styling but not linked to project yet. Formatting the page with
header, header text, footer, and places to plug in vue apps.

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,28 @@
+/* Fonts (not sure what I'm using yet) */
+
 font-family: 'Raleway', sans-serif;
 font-family: 'Source Sans Pro', sans-serif;
 font-family: 'Montserrat', sans-serif;
 font-family: 'Arimo', sans-serif;
 font-family: 'Playfair Display', serif;
 font-family: 'Mukta Vaani', sans-serif;
+
+/* Header Styling */
+.header-title {
+font-family: 'Raleway',
+}
+.header-about {
+
+}
+
+
+/* Footer Styling */
+.footer-name {
+
+}
+.footer-datasource {
+
+}
+.footer-codesource {
+
+}
