--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -18,6 +18,7 @@
 #company-container {
   margin-top: 2em;
   margin-left: 3.5em;
+  margin-bottom: 2em;
 }
 #company-name {
   font-family: 'Mukta Vaani', sans-serif;
@@ -44,13 +45,11 @@
 /* Explanatory Text Box Styling */
 #explanatory-text {
   font-family: 'Raleway', Helvetica, Arial, sans-serif;
-  margin-top: 3em;
-  margin-left: 3.5em;
 }
 /* Footer Styling */
 #footer-container {
   font-family: 'Raleway', Helvetica, Arial, sans-serif;
-  background-color: blue;
+  background-color: yellow;
 }
 #footer-name {
 
