--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -1,3 +1,13 @@
+/*Colors for reference
+#A0DEF6
+#3B7B8E
+#1DA1F2
+#DA2855
+#DA1724
+#FF6700
+#F5F8FA
+#328E54
+*/
 /* Header Styling */
 #header-container {
   text-align: center;
@@ -7,18 +17,19 @@
 #header-title {
   font-family: 'Mukta Vaani', sans-serif;
   font-size: 50px;
-  color: red;
+  color: #DA2855;
 }
 #header-about {
   font-family: 'Raleway', Helvetica, Arial, sans-serif;
   font-size: 30px;
-  color: blue;
+  color: #1DA1F2;
 }
 /* Company Styling */
 #company-container {
   margin-top: 2em;
   margin-left: 3.5em;
   margin-bottom: 2em;
+  background-color: #F5F8FA;
 }
 #company-name {
   font-family: 'Mukta Vaani', sans-serif;
@@ -49,7 +60,7 @@
 /* Footer Styling */
 #footer-container {
   font-family: 'Raleway', Helvetica, Arial, sans-serif;
-  background-color: yellow;
+  background-color: #3B7B8E;
 }
 #footer-name {
 
