--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -17,11 +17,11 @@
 #header-title {
   font-family: 'Mukta Vaani', sans-serif;
   font-size: 50px;
-  color: #DA2855;
+  color: #FF6700;
 }
 #header-about {
   font-family: 'Raleway', Helvetica, Arial, sans-serif;
-  font-size: 30px;
+  font-size: 22px;
   color: #1DA1F2;
 }
 /* Company Styling */
@@ -47,11 +47,15 @@
 #tweet-box {
   float: left;
   margin-left: 3.5em;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 /* Stock Chart Styling */
 #stock-chart {
   float: right;
   margin-right: 2em;
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 /* Explanatory Text Box Styling */
 #explanatory-text {
@@ -61,6 +65,7 @@
 #footer-container {
   font-family: 'Raleway', Helvetica, Arial, sans-serif;
   background-color: #3B7B8E;
+  color: #F5F8FA;
 }
 #footer-name {
 
