Intro vue component working.

--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -16,7 +16,7 @@
 #app {
   background-color: #F5F8FA;
 }
-/* Header Styling */
+/* Header Styling
 #header-bar {
   background-color: #3B7B8E;
   height: 35px;
@@ -40,7 +40,7 @@
   margin-top: 2em;
   margin-left: 3.5em;
   margin-bottom: 2em;
-}
+} */
 /* Company Styling */
 #company-container {
   margin-top: 2em;
